:chore :recycle: Update style project

--- a/pages/books/c_book.html
+++ b/pages/books/c_book.html
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Livros</title>
-  <link rel="stylesheet" href="../../home.css">
   <link rel="stylesheet" href="form_book.css">
+  <link rel="stylesheet" href="../../home.css">
+  
 </head>
 <body>
   <header>
@@ -14,7 +15,7 @@
     <nav>
       <ul>
         <li><a href="../../home.php">Home</a></li>
-        <li><a href="./books/">Livros</a></li>
+        <li><a href="./">Livros</a></li>
         <li><a href="../../logout.php">Sair</a></li>
       </ul>
     </nav>
@@ -34,7 +35,7 @@
         <option value="F">Ficção</option>
         <option value="D">Didático</option>
       </select>
-      <div>
+      <div class="radioInput">
         <label for="idioma">Idioma</label>
         <input type="radio" name="idioma" id="" value="ptBr">
         <span>Português</span>
