:chore :recycle: Fixed footers

--- a/pages/books/c_book.html
+++ b/pages/books/c_book.html
@@ -58,7 +58,11 @@
   </main>
 
   <footer>
-    Rodapé
+    <a href="https://github.com/DiegoEliasTB/SysBook" target="_blank">
+      <img src="../../assets/icons/github.svg" alt="github">
+      <span>Deloped by <strong>DiegoEliasTB</strong></span>
+    </a>
+    <span>SysBook © - Todos os direitos reservados<br>2021</span>
   </footer>
   
   <script src="script.js"></script>
