--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<?php
-  session_start()
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>novaLivraria</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="./src/styles/index.css">
 </head>
 <body>
   <h1>SysBook</h1>
   <main>
-    <form action="login.php" method="POST">
+    <form action="./src/services/login.php" method="POST">
       <label for="email">Email</label>
       <div class="inputLogin" id="inputEmail">
         <input type="email" name="email">
@@ -21,13 +18,13 @@
       <label for="senha">Senha</label>
       <div class="inputLogin">
         <input type="password" name="senha" id="senha">
-        <img id="buttonEye" src="./assets/icons/eye-off.svg" alt="Livros">
+        <img id="buttonEye" src="./src/assets/icons/eye-off.svg" alt="Livros">
       </div>
       <button type="submit">Acessar</button>
     </form>
-    <img src="./assets/images/undraw_book.svg" alt="Livros">
+    <img src="./src/assets/images/undraw_book.svg" alt="Livros">
   </main>
   <h2>Seus sistema gerenciador de livros<br>e mais!</h2>
-  <script src="./script.js"></script>
+  <script src="./src/utils/passwordView.js"></script>
 </body>
 </html>
