:refactor :recycle: Adjusted styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form action="./src/services/login.php" method="POST">
       <label for="email">Email</label>
       <div class="inputLogin" id="inputEmail">
-        <input type="email" name="email">
+        <input type="email" name="email" placeholder="sysbook@sysbook.com">
       </div>
       <label for="senha">Senha</label>
       <div class="inputLogin">
