--- a/src/pages/addBook/index.html
+++ b/src/pages/addBook/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="bt-br">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="author" content="DiegoEliasTB">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Livros</title>
+  <title>SysBook - Livros</title>
   <link rel="stylesheet" href="../../styles/home.css">
   <link rel="stylesheet" href="../../styles/form_book.css">  
 </head>
